GCal EveryAuth - Remove Redundant Views

--- a/examples/googlecalendar/views/newevent.mustache
+++ b/examples/googlecalendar/views/newevent.mustache
@@ -10,7 +10,7 @@
       <div class="card-header bg-primary text-white"> <h5 class="card-title">Add New Event</h5> </div>
       <div class="card card-body bg-light h-25" >
 
-        <form method="POST" action="/post/shehzad@fusebit.io" >
+        <form method="POST" action="DEFINE ROUTE" >
 
           <div class="mb-3">
             <div class="row justify-content-center">
@@ -64,11 +64,5 @@
         </div>
         </div>
         </div>
-
-
-
-
-
-
 </body>
 </html>
