--- a/examples/googlecalendar/views/index.mustache
+++ b/examples/googlecalendar/views/index.mustache
@@ -8,7 +8,7 @@
         <div class="card text-center" style="width: 24rem;">
             <div class="card-body bg-light">
               <h5 class="card-title">Google OAuth Calendar</h5>
-              <p class="card-text">A simple OAuth2 Application that will authenticate and authorize to access your Google Calendar and display the events.</p>
+              <p class="card-text">A simple OAuth2 Application that will authenticate and authorize to access your Google Calendar and display events.</p>
               <a href="/google/authorize/{{#userId}}{{.}}{{/userId}}" class="btn btn-primary">Sign In</a>
     </div>
 </div>
