--- a/examples/googlecalendar/views/calendarlist.mustache
+++ b/examples/googlecalendar/views/calendarlist.mustache
@@ -3,12 +3,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
-    <div class="vh-60 d-flex justify-content-center align-items-center">
-      
-      <div class="card text-center" style="width: 24rem;">
+    <div class="vh-100 d-flex justify-content-center align-items-center m-5 p-5">
+      <div class="card text-center">
         <div class="card-header bg-primary text-white"> <h5 class="card-title">Chooose a Calendar</h5> </div>
      <div class="card card-body bg-light">
-<div class="list-group">
+<div class="list-group overflow-scroll" style="height:100%; max-height: 40rem;"">
   {{#calendarsListData}}
     <a href="/google/calendar/events/{{id}}" class="list-group-item list-group-item-action">{{summary}}</a>
     {{/calendarsListData}}
