--- a/examples/pagerduty/views/index.pug
+++ b/examples/pagerduty/views/index.pug
@@ -3,23 +3,22 @@ doctype html
 html
   head
     title title
-    script(src="https://cdn.tailwindcss.com")
   body
     .container
       .profile
         h2 Welcome #{name}
             img.pic(src=avatar_url alt='PD Avatar')
             h2 Your services (#{svcs.length})
-              table(class="table-auto")
+              table()
                 thead
                   tr
-                    th(scope="col") #
-                    th(scope="col") Name
-                    th(scope="col") Status
+                    th() #
+                    th() Name
+                    th() Status
                     each svc, index in svcs
                       tbody
                         tr
-                        th(scope="row") #{index + 1}
+                        th() #{index + 1}
                           td 
                             a(href=svc.self) #{svc.name} 
                             td #{svc.status}
